优化代码，更新本地依赖